--- a/index.html
+++ b/index.html
@@ -781,16 +781,17 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="bootstrap.bundle.min.js"></script>
   <script src="php-email-form/validate.js"></script>
-  <script src="aos/aos.js"></script>
+  <script src="aos.js"></script>
   <script src="typed.js/typed.umd.js"></script>
-  <script src="purecounter/purecounter_vanilla.js"></script>
-  <script src="waypoints/noframework.waypoints.js"></script>
-  <script src="glightbox/js/glightbox.min.js"></script>
-  <script src="imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="swiper/swiper-bundle.min.js"></script>
+  <script src="purecounter_vanilla.js"></script>
+  <script src="noframework.waypoints.js"></script>
+  <script src="glightbox.min.js"></script>
+  <script src="imagesloaded.pkgd.min.js"></script>
+  <script src="isotope.pkgd.min.js"></script>
+  <script src="swiper-bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
   <!-- Main JS File -->
   <script src="main.js"></script>
