--- a/service.html
+++ b/service.html
@@ -19,7 +19,7 @@
 
   <!-- Vendor CSS Files -->
   <link href="bootstrap.min.css" rel="stylesheet">
-  <link href="bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="bootstrap-icons.css" rel="stylesheet">
   <link href="aos.css" rel="stylesheet">
   <link href="glightbox.min.css" rel="stylesheet">
   <link href="swiper-bundle.min.css" rel="stylesheet">
@@ -85,10 +85,10 @@
             <div class="service-box">
               <h4>Telecharger mes documents</h4>
               <div class="download-catalog">
-                <a href="documents/Cv.pdf" download><i class="bi bi-filetype-pdf"></i><span>Telecharger Cv</span></a>
-                <a href="documents/licence.pdf" download> <i class="bi bi-filetype-pdf"></i><span>Telecharger ma licence</span></a>
-                <a href="documents/Certificat.pdf" download ><i class="bi bi-filetype-pdf"></i><span>Telecharger Certificat</span></a>
-                <a href="documents/photo.jpeg" download><i class="bi bi-filetype-pdf"></i><span>Telecharger mon photo</span></a>
+                <a href="Cv.pdf" download><i class="bi bi-filetype-pdf"></i><span>Telecharger Cv</span></a>
+                <a href="licence.pdf" download> <i class="bi bi-filetype-pdf"></i><span>Telecharger ma licence</span></a>
+                <a href="ertificat.pdf" download ><i class="bi bi-filetype-pdf"></i><span>Telecharger Certificat</span></a>
+                <a href="profil.jpeg" download><i class="bi bi-filetype-pdf"></i><span>Telecharger mon photo</span></a>
 
               </div>
             </div><!-- End Services List -->
@@ -158,7 +158,7 @@
   <script src="bootstrap.bundle.min.js"></script>
   <script src="php-email-form/validate.js"></script>
   <script src="aos.js"></script>
-  <script src="typed.js/typed.umd.js"></script>
+  <script src="typed.umd.js"></script>
   <script src="purecounter_vanilla.js"></script>
   <script src="noframework.waypoints.js"></script>
   <script src="glightbox.min.js"></script>
