--- a/service.html
+++ b/service.html
@@ -87,7 +87,7 @@
               <div class="download-catalog">
                 <a href="Cv.pdf" download><i class="bi bi-filetype-pdf"></i><span>Telecharger Cv</span></a>
                 <a href="licence.pdf" download> <i class="bi bi-filetype-pdf"></i><span>Telecharger ma licence</span></a>
-                <a href="ertificat.pdf" download ><i class="bi bi-filetype-pdf"></i><span>Telecharger Certificat</span></a>
+                <a href="Certificat.pdf" download ><i class="bi bi-filetype-pdf"></i><span>Telecharger Certificat</span></a>
                 <a href="profil.jpeg" download><i class="bi bi-filetype-pdf"></i><span>Telecharger mon photo</span></a>
 
               </div>
