--- a/service.html
+++ b/service.html
@@ -23,6 +23,7 @@
   <link href="aos.css" rel="stylesheet">
   <link href="glightbox.min.css" rel="stylesheet">
   <link href="swiper-bundle.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Main CSS File -->
   <link href="main.css" rel="stylesheet">
