--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <link href="glightbox.min.css" rel="stylesheet">
   <link href="swiper-bundle.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Main CSS File -->
   <link href="main.css" rel="stylesheet">
@@ -39,11 +40,11 @@
 
     <nav id="navmenu" class="navmenu">
       <ul>
-        <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i><span>Accueil</span></a></li>
+        <li><a href="#hero" class="active"><i class="fa-solid fa-house"></i><span>Accueil</span></a></li>
         <li><a href="service.html"><i class="bi bi-hdd-stack navicon"></i><span>Services</span></a></li>
-        <li><a href="#about"><i class="bi bi-person navicon"></i><span>A propos</span></a></li>
-        <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i><span>Resumé</span></a></li>
-        <li><a href="#contact"><i class="bi bi-envelope navicon"></i><span>Contact</span></a></li>
+        <li><a href="#about"><i class="fa-solid fa-user"></i><span>A propos</span></a></li>
+        <li><a href="#resume"><i class="fa-solid fa-pen-nib"></i><span>Resumé</span></a></li>
+        <li><a href="#contact"><i class="fa-solid fa-address-book"></i><span>Contact</span></a></li>
       </ul>
     </nav>
 
@@ -62,10 +63,11 @@
             <h2>Issa Mahamat Tahir</h2>
             <p><span class="typed" data-typed-items=" Developpeur de données , Developpeur Web , Designer, Freelancer "> Ingenieur </span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
             <div class="social-links">
-              <a href="#"><i class="bi bi-twitter-x"></i></a>
-              <a href="#"><i class="bi bi-facebook"></i></a>
-              <a href="#"><i class="bi bi-instagram"></i></a>
-              <a href="#"><i class="bi bi-linkedin"></i></a>
+              <a href="#"><i class="fa fa-twitter-x"></i></a>
+              <a href="#"><i class="fa fa-facebook"></i></a>
+              <a href="#"><i class="fa fa-instagram"></i></a>
+              <a href="#"><i class="fa fa-linkedin"></i></a>
+              <a href="#"><i class="fa-brands fa-github"></i></a>
             </div>
           </div>
         </div>
